Fix cross-browser menu layout issues

--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -24,6 +24,7 @@ body {
 
 #site {
   height: 100vh;
+  width: 100vw;
   overflow-x: hidden;
   overflow-y: auto;
   position: relative;
